intro and overview added citation

--- a/intro.tex
+++ b/intro.tex
@@ -27,7 +27,7 @@
 
 Current approaches to object class detection have reached a remarkable
 level of performance in 2D bounding box
-localization~\cite{pascal12,Felzenszwalb10,Girshick14}, due to their
+localization~\cite{pascal12, Felzenszwalb10, Overfeat, Krizhevsky12, Girshick14}, due to their
 ability to generalize across differences in object appearance,
 lighting, and viewpoint. While this generalization
 ability of these methods is benefitial for robustness, it also limits
@@ -39,7 +39,7 @@ detectors in addition to 2D bounding boxes. Several attempts have been
 made to estimate viewpoint along with object class detections,
 implemented as extensions to existing detectors, such as the implicit
 shape models~\cite{sun10eccv}, the constellation model~\cite{stark10bmvc}, or the
-deformable part model~\cite{gu10eccv,Xiang12,Pepik12,Fidler12,Hejrati14}.
+deformable part model~\cite{Felzenszwalb10, gu10eccv,Xiang12,Pepik12,Fidler12,Hejrati14}.
 
 Recently, an even higher level of geometric detail was reached in the
 form of aligning
