--- a/egbib.bib
+++ b/egbib.bib
@@ -216,6 +216,35 @@ ISSN={1063-6919},}
   journal = "IEEE Transactions on Pattern Analysis and Machine Intelligence",
   year = "2010", volume = "32", number = "9", pages = "1627--1645"}
 
+@incollection{Krizhevsky12,
+title = {ImageNet Classification with Deep Convolutional Neural Networks},
+author = {Alex Krizhevsky and Sutskever, Ilya and Geoffrey E. Hinton},
+booktitle = {Advances in Neural Information Processing Systems 25},
+editor = {F. Pereira and C.J.C. Burges and L. Bottou and K.Q. Weinberger},
+pages = {1097--1105},
+year = {2012},
+publisher = {Curran Associates, Inc.},
+} 
+
+@article{Overfeat,
+author    = {Pierre Sermanet and
+             David Eigen and
+             Xiang Zhang and
+             Micha{\"{e}}l Mathieu and
+             Rob Fergus and
+             Yann LeCun},
+title     = {OverFeat: Integrated Recognition, Localization and Detection using
+             Convolutional Networks},
+journal   = {CoRR},
+year      = {2013},
+volume    = {abs/1312.6229},
+url       = {http://arxiv.org/abs/1312.6229},
+timestamp = {Fri, 14 Nov 2014 18:22:04 +0100},
+biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SermanetEZMFL13},
+bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
 @inproceedings{Girshick14,
     Author = {Girshick, Ross and Donahue, Jeff and Darrell, Trevor and Malik, Jitendra},
     Title = {Rich feature hierarchies for accurate object detection and semantic segmentation},
