--- a/related.tex
+++ b/related.tex
@@ -1,4 +1,4 @@
-\subsection{Object Detection and Viewpoint Estimation}
+%\subsection{Object Detection and Viewpoint Estimation}
 %
 Modern object detectors generalize very well, handling intraclass variability,
 occlusion, truncation and viewpoint changes \cite{Felzenszwalb10, Girshick14}.
